--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <div id="s1right">
 <h4>PPGPAHK</h4>
-<h3>最新美股財報速遞</h3>
+<h3>焦點美股財報速遞</h3>
 <img src="https://live.staticflickr.com/65535/51362463548_d9d9666ffb_w.jpg" width=90%>
 
 
