--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div id="s1left">
   <!-- <iframe width="600" height="340" src="https://www.youtube.com/embed?max-results=1&controls=0&showinfo=0&rel=0&listType=user_uploads&list=中国东方卫视官方频道China DragonTV Official" frameborder="0" allowfullscreen></iframe> -->
  
-  <iframe class="latestVideoEmbed" vnum='0' cid="UCeeHT-3WejdX6uGBgCbE7SA" width="850" height="476" autoplay="1" frameborder="0" allow="autoplay; fullscreen" ></iframe>
+  <iframe class="latestVideoEmbed" vnum='0' cid="UCeeHT-3WejdX6uGBgCbE7SA" width="850" height="476" frameborder="0"></iframe>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
