--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   </head>
   <link rel="stylesheet" href="index_main.css">
+  <link rel="stylesheet" href="carousel.css">
+  <link rel="stylesheet" href="c1.css">
+  <link rel="stylesheet" href="c2.css">
+
+ <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css" /> -->
+ <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />  -->
 </head>
 
 <body>
@@ -40,21 +46,49 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="video_manual.js"></script>
 </div>
-
 <div id="s1right">
 <h4>PPGPAHK</h4>
 <h3>焦點美股財報速遞</h3>
 <img src="https://live.staticflickr.com/65535/51362463548_d9d9666ffb_w.jpg" width=90%>
-
-
 </div>
 
   </div>
+
+  <div id="section2">
+    <div class="square">
+      <div class="squareTag">美股經濟大事</div>
+    </div>
+    <hr class="solid">
+    <div class="items">
+      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190720/gallery/preview/02_o_car.jpg"></div>
+      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190715/gallery/preview/03_r_car.jpg"></div>
+      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190714/gallery/preview/04_g_car.jpg"></div>
+      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190720/gallery/preview/02_o_car.jpg"></div>
+      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190715/gallery/preview/03_r_car.jpg"></div>
+      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190714/gallery/preview/04_g_car.jpg"></div>
+      
+  </div>
+
+  <script>
+    $(document).ready(function(){
+      $('.items').slick({
+      lazyLoad: 'ondemand',
+      slidesToShow: 3,
+      slidesToScroll: 3,
+      infinite: true,
+      });  
+      
+      });
+  </script>
+
+
+    </div>
 
    
   <!-- <div id="manual1"> </div> -->
 
   <!-- <script src="manual1.js"> </script> -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </body>
 
 
