--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="carousel.css">
   <link rel="stylesheet" href="c1.css">
   <link rel="stylesheet" href="c2.css">
+  <link rel="stylesheet" href="footer.css">
+
 
  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css" /> -->
  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />  -->
@@ -40,7 +42,7 @@
 <div id="s1left">
   <!-- <iframe width="600" height="340" src="https://www.youtube.com/embed?max-results=1&controls=0&showinfo=0&rel=0&listType=user_uploads&list=中国东方卫视官方频道China DragonTV Official" frameborder="0" allowfullscreen></iframe> -->
  
-  <iframe class="latestVideoEmbed" vnum='0' cid="UCeeHT-3WejdX6uGBgCbE7SA" width="850" height="476" frameborder="0"></iframe>
+  <iframe class="latestVideoEmbed" vnum='0' cid="UCETuQf4lzTrfevoHdSGo8Ew" width="850" height="476" frameborder="0"></iframe>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -60,12 +62,12 @@
     </div>
     <hr class="solid">
     <div class="items">
-      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190720/gallery/preview/02_o_car.jpg"></div>
-      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190715/gallery/preview/03_r_car.jpg"></div>
-      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190714/gallery/preview/04_g_car.jpg"></div>
-      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190720/gallery/preview/02_o_car.jpg"></div>
-      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190715/gallery/preview/03_r_car.jpg"></div>
-      <div><img data-lazy="https://res.cloudinary.com/dxfq3iotg/image/upload/v1565190714/gallery/preview/04_g_car.jpg"></div>
+      <div><img data-lazy="https://live.staticflickr.com/65535/51368413770_61159845ce_w.jpg"></div>
+      <div><img data-lazy="https://live.staticflickr.com/65535/51368139619_2233c63acd_w.jpg"></div>
+      <div><img data-lazy="https://live.staticflickr.com/65535/51368413800_b47c0437c4_w.jpg"></div>
+      <div><img data-lazy="https://live.staticflickr.com/65535/51368139619_2233c63acd_w.jpg"></div>
+      <div><img data-lazy="https://live.staticflickr.com/65535/51368413770_61159845ce_w.jpg"></div>
+      <div><img data-lazy="https://live.staticflickr.com/65535/51368413800_b47c0437c4_w.jpg"></div>
       
   </div>
 
@@ -81,6 +83,15 @@
       });
   </script>
 
+<br>
+
+  <div id="section3">
+    <div class="square">
+      <div class="squareTag">金日點評</div>
+    </div>
+    <hr class="solid">
+
+  </div>
 
     </div>
 
@@ -91,6 +102,59 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </body>
 
+
+
+  <!-- footer -->
+
+  <footer class="footer-distributed">
+
+    <div class="footer-left">
+
+      <h3>彭博環球創富學院</h3>
+      <h3>PP Global Prosperity Academy</h3>
+
+      <p class="footer-links">
+        <a href="#">黃金</a>
+        ·
+        <a href="#">美股</a>
+        ·
+        <a href="#">外滙</a>
+        ·
+        <a href="#">債券</a>
+        ·
+        <a href="#">投資權威</a>
+      
+        <!-- <a href="#">Contact</a> -->
+      </p>
+
+      <p class="footer-company-name">PPGPAHK © 2021</p>
+
+      <div class="footer-icons">
+
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-github"></i></a>
+
+      </div>
+
+    </div>
+
+    <div class="footer-right">
+
+      <p>Contact Us</p>
+
+      <form action="#" method="post">
+
+        <input type="text" name="email" placeholder="Email">
+        <textarea name="message" placeholder="Message"></textarea>
+        <button>Send</button>
+
+      </form>
+
+    </div>
+
+  </footer>
 
 
   </html>
