--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
         <a href="#"><i class="fa fa-facebook"></i></a>
         <a href="#"><i class="fa fa-instagram"></i></a>
         <a href="#"><i class="fa fa-whatsapp"></i></a>
+        <a href="#"><i class="fa fa-envelope"></i></a>
  
       </div>
 
