metadata_for_main

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link rel="stylesheet" href="blogList.css">
   <link rel="stylesheet" href="footer.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>彭博環球創富學院 | 緊貼美股動向, 環球經濟大事, 黃金投基, 外匯走勢, 債券市場動態</title>
+  <title>彭博環球創富學院 PPGPAHK| 緊貼美股動向, 環球經濟大事, 黃金投基, 外匯走勢, 債券市場動態</title>
+  <meta name="title" content="彭博環球創富學院 PPGPAHK| 緊貼美股動向, 環球經濟大事, 黃金投基, 外匯走勢, 債券市場動態">
+  <meta name="description" content="美股財經資訊網站，緊貼美國股市、財經新聞、國際新聞、經濟數據分析、黃金外滙債券資訊、個股狀態診斷，助您運用數據、把握投資先機。">
+  <meta name="news_keywords" content="美股財經, 財經新聞, 環球經濟數據, 股市消息, 股票網站, 個股診斷及推薦, 外幣, 外匯, 美股, 投資理財, 黃金投機, 視頻分析，全方位多角度緊貼大市。">
 
 
  <!-- <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.1/slick/slick-theme.css" /> -->
@@ -288,7 +291,7 @@
 
         <input type="text" name="email" placeholder="Email">
         <textarea name="message" placeholder="Message"></textarea>
-        <button>Send</button>
+        <!-- <button>Send</button> -->
 
       </form>
 
