--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
 <div id="navRight">
   <div class="vl"></div>
-<a href="javascript:void(0)">Instagram</a>
+<a href="https://www.instagram.com/ppgpahk/?hl=en">Instagram</a>
 <div class="vl"></div>
-<a href="javascript:void(0)">Facebook</a>
+<a href="https://www.facebook.com/ppgpahk">Facebook</a>
 
 <a class="active" style="color:white" href="javascript:void(0)">聯絡我們</a>
 </div>
@@ -47,7 +47,6 @@
 <div id="section1">
 
 <div id="s1left">
-  <!-- <iframe width="600" height="340" src="https://www.youtube.com/embed?max-results=1&controls=0&showinfo=0&rel=0&listType=user_uploads&list=中国东方卫视官方频道China DragonTV Official" frameborder="0" allowfullscreen></iframe> -->
  
   <iframe class="latestVideoEmbed" vnum='0' cid="UCn8B3QBCXwbRAxHUxuiSs-g" width="850" height="476" frameborder="0"></iframe>
 
@@ -58,7 +57,7 @@
 <div id="s1right">
 <h4>PPGPAHK</h4>
 <h3>焦點美股財報速遞</h3>
-<img src="https://live.staticflickr.com/65535/51362463548_d9d9666ffb_w.jpg" width=90%>
+<div id="manual1"></div>
 </div>
 
   </div>
@@ -239,9 +238,9 @@
 
     
    
-  <!-- <div id="manual1"> </div> -->
+  <div id="manual1"> </div>
 
-  <!-- <script src="manual1.js"> </script> -->
+  <script src="manual1.js"> </script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   </body>
 
